<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.petrilica.pc.comeandbuildme.Bluetooth.DeviceListActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:title="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/lollipop"
            app:popupTheme="@style/AppTheme.NoActionBar" />

    </android.support.design.widget.AppBarLayout>


        <TextView
            android:id="@+id/title_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/title_paired_devices"
            android:visibility="gone"
            android:textSize="20dp"
            android:textStyle="bold|italic"/>

        <ListView
            android:id="@+id/paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stackFromBottom="true"/>

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/title_other_devices"
            android:textSize="20dp"
            android:textStyle="bold|italic"
            android:visibility="gone"
            />

        <ListView
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:stackFromBottom="true"
            />

        <Button
            android:id="@+id/button_scan"
            android:background="@drawable/button4"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:text="@string/button_scan"
            android:layout_gravity="center"
            android:textColor="#ffffffff"
            android:textStyle="bold|italic"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>