<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2014 The Android Open Source Project
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
     http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:title="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/lollipop"
        app:popupTheme="@style/AppTheme.NoActionBar" />
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="399dp"
        android:layout_height="230dp"
        android:src="@drawable/makefriends"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40sp" />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"        >

    <Button
        android:id="@+id/button_discoverable"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/discoverable"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:textStyle="bold|italic"
        android:background="@drawable/button4"
        android:layout_weight="1"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="0dp"

        />
    <Button
        android:id="@+id/button_choose"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/choose_device"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:textStyle="bold|italic"
        android:background="@drawable/button2"
        android:layout_weight="1"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="10dp"
        />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:background="@drawable/button3"
            android:textStyle="bold|italic"
            android:layout_weight="1"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
</LinearLayout>