<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="rs.elfak.korka1.korkaquiz.Activities.RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:fillViewport="false">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextName"
                android:hint="Name"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextSurname"
                android:hint="Surname"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextUsername"
                android:hint="Username"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextPassword"
                android:hint="Password"
                android:password="true"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextEmail"
                android:hint="E-mail"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pictureButton"
                android:id="@+id/pictureButton"
                android:onClick="pictureButtonClicked"
                android:layout_weight="1"
                android:background="@drawable/button4"
                android:textStyle="bold|italic"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#ffffffff" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView"

                android:layout_weight="1"
                android:layout_gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelButton"
                    android:id="@+id/buttonCancel"
                    android:onClick="buttonCancelClicked"
                    android:background="@drawable/button2"
                    android:layout_gravity="right"
                    android:textStyle="bold|italic"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textColor="#ffffffff" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nextButton"
                    android:id="@+id/buttonNext"
                    android:onClick="buttonNextClicked"
                    android:background="@drawable/button3"
                    android:layout_gravity="left"
                    android:textStyle="bold|italic"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:textColor="#ffffffff" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>